# FluxAttention

./: LICENSE  README.md  main.py  pyproject.toml  requirements.txt
.github/workflows/: deploy-pages.yml
docs/: _config.yml  index.md
docs/_includes/: footer.html  head-custom.html  header.html
docs/assets/: custom.css  main.scss  reveal.js
fluxattn/: arguments.py
fluxattn/run_scripts/: qwen_parallel.sh  qwen_qqt_parallel.sh
fluxattn/src/: Xattention.py
fluxattn/training/: __init__.py  dataset_packing.py  lh_train_language_model.py  modeling_flash_llama.py  modeling_flash_qwen.py
fluxattn/training/eval/: modeling_flash_llama.py  modeling_flash_qwen.py
nano-vllm-Flux-Attention/: example.py
nano-vllm-Flux-Attention/nano_vllm.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
nano-vllm-Flux-Attention/nanovllm/engine/: block_manager.py  model_runner.py  scheduler.py  sequence.py
nano-vllm-Flux-Attention/nanovllm/layers/: attention.py
nano-vllm-Flux-Attention/nanovllm/models/: qwen3.py
nano-vllm-Flux-Attention/nanovllm/utils/: loader.py
sparseattn/: __init__.py
sparseattn/src/: Xattention.py  __init__.py
sparseattn/training/: dataset_packing.py  lh_trainer.py  modeling_flash_llama.py  modeling_flash_qwen.py  script_arguments.py
sparseattn/training/eval/: modeling_flash_llama.py  modeling_flash_qwen.py
